[project]
name = "y360-calendar"
version = "0.1.0"
description = "TUI app for viewing Yandex 360 calendar events"
requires-python = ">=3.11"
dependencies = [
    "caldav",
    "httpx",
    "rich",
    "vobject",
]

[project.scripts]
y360-calendar = "y360_calendar.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/y360_calendar"]
